--- a/maven_test/pom.xml
+++ b/maven_test/pom.xml
@@ -7,3 +7,17 @@
   <name>maven_test</name>
   <description>A simple maven project</description>
 </project>
+
+<settings>
+    <pluginGroups>
+        <pluginGroup>org.sonarsource.scanner.maven</pluginGroup>
+    </pluginGroups>
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+     </profiles>
+</settings>
